TEIIDTOOLS-551: updating some properties and fixing a test